fix deprecation in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ requires = python-setuptools >= 0.6c6 python-ctypes
 install_script = rpm/install
 group = System Environment/Daemons
 
-[pytest]
+[tool:pytest]
 norecursedirs = examples lib local src
 
 [wheel]
